--- a/deploy/docker-compose.dev.yml
+++ b/deploy/docker-compose.dev.yml
@@ -1,1 +1,12 @@
 version: '3.5'
+
+services:
+  pushgateway:
+    deploy:
+      placement:
+        constraints:
+          - node.hostname == ${PLACEMENT_CONSTRAINTS_NODE_HOSTNAME:-hostname}
+
+volumes:
+  data-vol:
+    name: ${DATA_VOL_NAME}
