--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -1,1 +1,8 @@
 version: '3.5'
+
+volumes:
+  data-vol:
+    name: ${DATA_VOL_NAME}
+    driver: 'cloudstor:aws'
+    driver_opts:
+      backing: shared
