Corrige ruta de persistencia, no tenía permisos

--- a/deploy/.env
+++ b/deploy/.env
@@ -1,6 +1,6 @@
 PORT=9091
 METRICS_PATH=/metrics
-DATA_PATH=/db
+DATA_PATH=/pushgateway
 PERSISTENCE_INTERVAL=5m
 LOG_LEVEL=info
 DATA_VOL_NAME=pushgateway-vol
