Migra a Traefik v2, renombra variable de auth

--- a/deploy/.env
+++ b/deploy/.env
@@ -3,4 +3,7 @@ METRICS_PATH=/metrics
 DATA_PATH=/pushgateway
 PERSISTENCE_INTERVAL=5m
 LOG_LEVEL=info
+
 DATA_VOL_NAME=pushgateway-vol
+
+TRAEFIK_AUTH=user:$apr1$md5password
