--- a/deploy/docker-compose.tmpl.yml
+++ b/deploy/docker-compose.tmpl.yml
@@ -22,10 +22,12 @@ services:
       update_config:
         delay: ${UPDATE_DELAY:-1m}
       labels:
-        traefik.frontend.auth.basic.users: ${UI_AUTH}
-        traefik.frontend.rule: Host:${TRAEFIK_SUBDOMAIN:-pushgateway}.${PUBLIC_HOSTNAME}
-        traefik.backend: pushgateway
-        traefik.port: '${PORT}'
+        traefik.enable: ${TRAEFIK_ENABLE:-true}
+        traefik.http.routers.pushgateway.entrypoints: ${TRAEFIK_ENTRYPOINT:-http}
+        traefik.http.routers.pushgateway.rule: Host(`${TRAEFIK_SUBDOMAIN:-pushgateway}.${PUBLIC_HOSTNAME}`)
+        traefik.http.middlewares.pushgateway-auth.basicauth.users: ${TRAEFIK_AUTH}
+        traefik.http.routers.pushgateway.middlewares: pushgateway-auth
+        traefik.http.services.pushgateway.loadbalancer.server.port: ${PORT}
       resources:
         limits:
           cpus: '${RESOURCES_LIMITS_CPUS:-0.1}'
