Actualiza variables y valores por defecto
Retoca opciones de montaje y límites de recursos.

--- a/deploy/.env
+++ b/deploy/.env
@@ -4,6 +4,11 @@ DATA_PATH=/pushgateway
 PERSISTENCE_INTERVAL=5m
 LOG_LEVEL=info
 
+TRAEFIK_AUTH=user:$apr1$md5password
+
 DATA_VOL_NAME=pushgateway-vol
 
-TRAEFIK_AUTH=user:$apr1$md5password
+VOL_TYPE=nfs
+VOL_ADDR=127.0.0.1
+VOL_VERS=4.2
+VOL_OPTS=nolock,noacl,noatime,nodiratime
