--- a/deploy/compose.prod.yaml
+++ b/deploy/compose.prod.yaml
@@ -1,6 +1,6 @@
 volumes:
   data-vol:
     name: ${DATA_VOL_NAME}
-    driver: 'cloudstor:aws'
+    driver: ${VOL_DRIVER:-cloudstor:aws}
     driver_opts:
-      backing: shared
+      backing: ${VOL_BACKING:-shared}
